[package]
name = "diesel-tracing"
version = "0.2.0"
authors = ["John Children <john@cambridgequantum.com>"]
license = "MIT"
edition = "2018"
description = "Connection telemetry middleware for diesel and tracing"
repository = "https://github.com/CQCL/diesel-tracing"
readme = "README.md"
keywords = ["diesel", "logging", "tracing", "database", "opentelemetry"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []

mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[dependencies]
diesel = { version = "2.0", features = ["network-address", "r2d2"], default-features = false }
ipnetwork = ">=0.12.2, <0.19.0"
tracing = "0.2"

[dev-dependencies]
diesel-tracing = { path = ".", features = ["postgres"] }
diesel = { version = "2.0" }

[patch.crates-io]
diesel = { git = 'https://github.com/diesel-rs/diesel.git', rev = 'b048d6e' }
tracing = { git = 'https://github.com/tokio-rs/tracing.git', branch = 'master' }
